# eldstar

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  appveyor.yml
.github/workflows/: build.yml
eldstar_client/: eldstar_client.lua
eldstar_server/: CMakeLists.txt  README.md  build.ps1  build_deps.ps1  download_deps.ps1
eldstar_server/framedump/: README.rst
eldstar_server/resources/models/: camera.stl  cylinder_caps.stl  cylinder_perimeter.stl  cylinder_pointer.stl  world_object.stl
eldstar_server/resources/shaders/: mesh.fs  mesh.vs  mesh_vs.glsl  text_fs.glsl  text_vs.glsl
eldstar_server/src/: controls.hpp  entrypoint.cpp  exceptions.hpp  input.hpp  menu.hpp  parser.hpp  resources.hpp  resources.rc  resources_cheats.rc  resources_tassafe.rc  socket.hpp  tracking.hpp  window.hpp
eldstar_server/src/game/: dynamic_object.hpp  geometry.hpp  item_object.hpp  world.hpp  world_object.hpp
eldstar_server/src/gl/: camera.hpp  dump.hpp  glad.hpp  glfw.hpp  object_buffers.cpp  object_buffers.hpp  primitives.hpp
eldstar_server/src/loaders/: file.hpp  png.hpp  sample.hpp  shader.hpp  stl.hpp  truetype.hpp
